--- a/asset/styles.css
+++ b/asset/styles.css
@@ -1,19 +1,30 @@
+body {
+    font-family: "sans", serif;
+    background-color: #23242b;
+  }
+  p {
+    color: grey;
+  }
+  h5 {
+    color: grey;
+  }
 .container{
     display: flex;
     flex-direction: row;
     height: 100vh;
     margin: 0;
-    background-color: #2d3035;
+ 
 }
 .navbar{
     background-color:#2d3035;
     width: 25%;
     border-right: 2px solid grey;
-    position: sticky
+    position: sticky;
+    min-width: 220px;
 }
 .home{
     width: 100%;
-    overflow-y:hidden;
+    overflow-y:auto;
 
 }
 
@@ -51,6 +62,7 @@ div.option:hover{
     opacity: 0.8;
     cursor: pointer;
     color: red;
+    background-color: rgba(255, 0, 0,0.1);
 }
 .option-text{
     font-size: 20px;
@@ -63,6 +75,7 @@ div.option:hover{
     padding: 15px;
     align-items: center;
     justify-content: space-between;
+    min-width: 1000px;
 
 }
 .search-bar{
@@ -71,6 +84,7 @@ div.option:hover{
 
 input{
   width: 550px;
+
   height: 20px;
   border-radius: 15px;
   margin-left: 5px;
@@ -80,6 +94,7 @@ input{
     display: flex;
     flex-direction: row;
     align-items: center;
+    min-width: 300px;
 }
 .profile-image{
     height: 45px;
@@ -144,6 +159,10 @@ input{
     color:grey;
     font-weight: bold;
 }
+.button:hover{
+    border: 2px solid white;
+    color: white;
+}
 
 .projects-annoucements-peoples{
     display: flex;
@@ -157,7 +176,7 @@ input{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    max-height: 550px;
+    max-height: 50px;
 }
 .annoucements-peoples{
     background-color: 23242b;
@@ -172,6 +191,8 @@ input{
     padding:8px;
     border-left:10px solid #5d4093;
     height: 150px;
+    min-width: 250px;
+    margin: 5px;
 }
 .card-text{
     font-size: small;
@@ -195,6 +216,7 @@ input{
    padding: 20px;
 width: 70%;
 height: fit-content;
+min-width: 200px;
 }
 .annoucement{
     
@@ -204,8 +226,10 @@ height: fit-content;
 .peoples{
     background-color: #2d3035;
     border-radius: 10px;
-    width: 70%;
+    width: 73%;
     padding: 15px;
+min-width: 200px;
+
 
 }
 .people{
@@ -213,13 +237,24 @@ height: fit-content;
     flex-direction: row;
     padding-left:10px;
     padding-right: 10px;
-    align-items:center;;
+    align-items:center;
+    padding-bottom: 5px;
 
 
 }
+.profile-icon{
+    font-size: 22px; color: green;
+    
+}
+
 .people-image{
     border-radius: 100px;
-    height: 40px;
-    width: 40px;
-    margin-right: 10px;
+    height: 50px;
+    width: 50px;
+    margin-right: 30px;
+}
+.people-name{
+    color: #bababd;
+    font-weight: bold;
+    font-size: medium;
 }
