--- a/asset/styles.css
+++ b/asset/styles.css
@@ -27,13 +27,23 @@ body {
     overflow-y:auto;
 
 }
-
+.button-icon{
+    color:gray;font-size: 30px;
+    cursor: pointer;
+}
+.button-icon:hover{
+    color:white
+}
+.button-icon:active{
+    color:black;
+}
 .dashboard{
     display: flex;
     flex-direction: row;
     align-items: center;
-   
-    padding:15px
+   justify-content: space-between;
+    padding:15px;
+    
 
 }
 .dashboard-text{
@@ -181,10 +191,13 @@ width: 100%;
 
 }
 .projects{
+    display: flex;
+    flex-grow: 1;
     background-color:#23242b;
     width: 70%;
     display:flex;
     flex-wrap: wrap;
+    
     justify-content: space-evenly;
 }
 .annoucements-peoples{
@@ -193,13 +206,16 @@ width: 100%;
 
 
 .project-card{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
     background-color: #2d3035;
-    max-width: 350px;
+    width: 270px;
     border-radius: 10px;
     padding:8px;
     border-left:10px solid #5d4093;
-    
-    min-width: 250px;
+    min-width: 300px;
+    max-width: 500px;
     margin: 5px;
 }
 .card-text{
