--- a/asset/styles.css
+++ b/asset/styles.css
@@ -17,10 +17,10 @@ body {
 }
 .navbar{
     background-color:#2d3035;
-    width: 25%;
+    width: 24%;
     border-right: 2px solid grey;
     position: sticky;
-    min-width: 220px;
+    min-width: fit-content
 }
 .home{
     width: 100%;
@@ -53,6 +53,9 @@ body {
     color:grey
 }
 
+.close-icon{
+    padding: 5px;
+}
 .nav-options{
    
 
@@ -103,14 +106,15 @@ width: 100%;
   border-radius: 15px;
   margin-left: 5px;
   background-color:gray;
-  min-width: 100px;
+  min-width: 50px;
   max-width: 550px;
 }
 .profile{
     display: flex;
     flex-direction: row;
     align-items: center;
-    min-width: 300px;
+    min-width: fit-content;
+    
 }
 .profile-image{
     height: 45px;
@@ -121,6 +125,7 @@ width: 100%;
 }
 .proflie-name{
     font-weight: 700;
+    font-size:15px;
     color:#7f7f7f
 }
 .large-profile-image{
@@ -159,9 +164,10 @@ width: 100%;
 .buttons{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    margin-right: 10px;
+    justify-content: right;
     
-    justify-content: space-around;
-    margin-right: 50px;
 }
 .button{
     width: 110px;
@@ -175,6 +181,7 @@ width: 100%;
     color:grey;
     font-weight: bold;
     margin-right: 10px;
+    margin: 2px;
 }
 .button:hover{
     border: 2px solid white;
